--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -21,12 +21,15 @@ body,html{
   z-index: 999;
   width: 260px;
   height: 100%;
-  background: #59de15;
+  background-color: #1e1e27;
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.05);
   transition: right .3s ease;
 
   &.wide {
     right: -260px;
+  }
+  p{
+    color: red;
   }
 }
 
