--- a/src/assets/styles/login.scss
+++ b/src/assets/styles/login.scss
@@ -48,13 +48,13 @@
 
   .email-input input{
     background-image: url('/src/assets/styles/images/123.png');
-    background-size: 9% 40%;
+    background-size: 8% 38%;
     background-repeat: no-repeat;
     background-position: 96%;
   }
   .password-input input{
     background-image: url('/src/assets/styles/images/Lock@3x.png');
-    background-size: 9% 60%;
+    background-size: 8% 57%;
     background-repeat: no-repeat;
     background-position: 96%;
   }
@@ -63,14 +63,14 @@
     position: absolute;
     background-size: 1% 2%;
     width: 2rem;
-    padding-top: 1rem;
+    padding-top: 13px;
     background-position: left;
     padding-right: 1rem;
     margin-right: 13.5rem;
   }
   .captcha-input input{
     background-image: url('/src/assets/styles/images/Lock@3x.png');
-    background-size: 9% 60%;
+    background-size: 8% 57%;
     background-repeat: no-repeat;
     background-position: 96%;
   }
@@ -149,7 +149,10 @@ font-size: small;
   background-color: rgba(255, 255, 255, 0.25);
   border-radius: 5px;
   padding: 0.2rem 0.4rem;
-  margin-left: 0.2rem;
+  margin-left: 13px;
+  margin-top: -1rem;
+  width: 29px;
+  float: inline-end !important;
 }
 
 .primary-widget{
@@ -866,4 +869,74 @@ input:checked + .slider:before {
 .list-group-item{
   background-color: #1e1e27;
   color: #e1e1e1;
+}
+.dropdown{
+  text-decoration: none;
+  color: #ffffff;
+}
+.dropdown-menu{
+  background: rgba(170, 170, 179, 0.18);
+}
+.dropdown-toggle {
+  position: relative;
+}
+.dropdown .caret{
+  background-color: red;
+}
+.caret{
+  background-color: red;
+}
+
+.dropdown-toggle::after {
+  position: absolute;
+  right: 100px;
+  bottom: 40%;
+  display: none;
+
+}
+.router-link{
+  text-decoration: none;
+  color: #ffffff;
+}
+.footer{
+  height: 75px;
+  width: 100%;
+  background: rgba(170, 170, 179, 0.18);
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.05);
+  line-height: 75px;
+  padding: 0 24px 0 8px;
+  margin-top: 15px;
+}
+.collapse-item{
+  text-decoration: none;
+}
+.arrow-left{
+  width: 7px;
+  height: 9px;
+  margin-top: -15px;
+}
+.arrow-down{
+  width: 7px;
+  height: 9px;
+  margin-top: -15px;
+  transform: rotate(270deg);
+}
+.ul-sidebar{
+  padding: 22px;
+  padding-top: 10px
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+.top-nav-img{
+  width: 30% ;
+  height: 50%;
+  background: rgba(170, 170, 179, 0.18);
+}
+.dropdown-item{
+  max-height: 56px;
+}
+.btn-login{
+  background: #009EF7;
 }
