--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -36,7 +36,7 @@ body,html{
 #content {
   width: calc(100% - 260px);
   float: left;
-  padding: 16px 16px 100px 16px;
+  padding: 6px 6px 100px 6px;
   transition: all .3s ease;
 
   &.wide {
@@ -59,10 +59,9 @@ body,html{
 }
 
 #top-nav-bar {
-  height: 75px;
+  height: 70px;
   width: 100%;
-  background: #ee1919;
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.05);
+  background-color: white;
   line-height: 75px;
   padding: 0 24px 0 8px;
 }
@@ -70,7 +69,7 @@ body,html{
 #page {
   margin-top: 16px;
   padding: 16px 16px 16px 0;
-  min-height: calc(100vh - 123px);
-  background: #1e1e2d;
+  min-height: calc(94vh - 123px);
+  background:rgba(170, 170, 179, 0.18);
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.05);
 }
