--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -6,7 +6,9 @@
 body,html{
   direction: rtl;
 }
-
+.ltr {
+  direction: ltr;
+}
 #main {
   overflow: hidden;
   direction: rtl;
@@ -19,7 +21,7 @@ body,html{
   top: 0;
   padding-left: 16px;
   z-index: 999;
-  width: 260px;
+  width: 270px;
   height: 100%;
   background-color: #1e1e27;
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.05);
